# TinyBMS_Web_Gateway

./: .gitignore  ANALYSIS_SUMMARY.txt  Analyse_Methode.txt  CMakeLists.txt  COHERENCE_REVIEW.md  COMMUNICATION_REFERENCE.json  DOCUMENTATION_COMMUNICATIONS.md  Echarts-analyser.html  IMG_4979.HEIC  IMG_4980.HEIC  PATHS_REFERENCE.txt  PHASE1_IMPLEMENTATION.md  PHASE4_IMPLEMENTATION.md  PHASE4_SUMMARY.md  PR_DESCRIPTION.md  RAPPORT_CONFORMITE.md  README.md  README_DOCUMENTATION.md  REFACTORING_PLAN.md  REFACTORING_REVIEW.md  partitions.csv  purge-css.html  sdkconfig.defaults
archive/: README.md
archive/docs/: ANALYSE_CODE_QUALITE_2025.md  Analyse_TinyBMS-GW.md  CCGX-Modbus-TCP-register-list-3.60.xlsx  CHANGELOG.md  COHERENCE_REVIEW.md  CORRECTIONS_APPLIED.md  INDEX.md  ISSUES_PRIORITIZED.txt  PHASE2_IMPLEMENTATION.md  PHASE3_IMPLEMENTATION.md  README.md  README_ARCHIVE.md  acceptance_criteria.md  bridge_pgn_defs.h  can_mapping_state.md  code_review_final_checks.md  cvl_logic.cpp  mapping_audit.md  mapping_normalized.csv  mqtt_module.md  queue_size_correction_analysis.md  settings.js  status_led.md  task_uart_unregister_fix.md  tiny_read.json  tiny_read_4vic.json  todo.txt  victron_can_mapping.h
archive/reference/: ANALYSIS_SUMMARY.txt  PLAN_IMPLEMENTATION_CORRECTIONS.md  README_DOCUMENTATION.md  (+1 more)
docs/: COMMUNICATION_REFERENCE.json  EVCS-Modbus-TCP-register-list-v3.8 2.xlsx  Tiny_reg_mapping 2.xlsx  UART_CAN_mapping.json  UART_CAN_mapping.xlsx  api_endpoints.md  arborescence  architecture.md  bridge_can.cpp  bridge_can.h  bridge_core.h  bridge_cvl.cpp  bridge_cvl.h  bridge_keepalive.cpp  can_mapping_state.md  config.json  cvl_logic.cpp  cvl_logic.h  cvl_types.h  mapping_audit.md  mapping_normalized.csv  mqtt_bms_architecture_draft.md  operations.md  pgn_conversions.md  pgn_mapping.xlsx  queue_size_correction_analysis.md  release_notes_integrateurs.md  roadmap.md  shared_data.h  tiny_read_mapping.h  tiny_rw_mapping.h  tinybms_register_can_flow.md  tinybms_victron_bridge.h  uart_bms_register_gap_analysis.md  victron_alarm_utils.h  victron_can.cpp  victron_state_utils.h  web_server_implementation.md  wifi_architecture.md
mac-local/: README.md  package.json
main/: CMakeLists.txt  Kconfig.projbuild  app_main.c
main/alert_manager/: alert_manager.c
main/can_publisher/: CMakeLists.txt  can_publisher.c  can_publisher.h  conversion_table.c  conversion_table.h  cvl_controller.c
main/can_victron/: CMakeLists.txt  can_victron.c  can_victron.h
main/common/: mutex_timeouts.h
main/config_manager/: CMakeLists.txt  config_manager.c  config_manager.h
main/event_bus/: CMakeLists.txt  event_bus.c  event_bus.h
main/include/: app_config.h  app_events.h  can_config_defaults.h
main/monitoring/: CMakeLists.txt  history_logger.c  history_logger.h  monitoring.c  monitoring.h
main/mqtt/: tiny_mqtt_publisher.c  tiny_mqtt_publisher.h
main/mqtt_client/: CMakeLists.txt  mqtt_client.c  mqtt_client.h  mqtt_topics.h
main/mqtt_gateway/: mqtt_gateway.c  mqtt_gateway.h
main/pgn_mapper/: CMakeLists.txt  pgn_mapper.c  pgn_mapper.h
main/serialization/: telemetry_json.c  telemetry_json.h
main/status_led/: status_led.c  status_led.h
main/storage/: history_fs.c  history_fs.h  system_boot_counter.c  system_boot_counter.h
main/system_metrics/: system_metrics.c
main/uart_bms/: CMakeLists.txt  uart_bms.c  uart_bms.cpp  uart_bms.h  uart_bms_protocol.c  uart_bms_protocol.h  uart_frame_builder.cpp  uart_frame_builder.h  uart_response_parser.cpp
main/web_server/: CMakeLists.txt  web_server.c  web_server.h  web_server_alerts.c  web_server_api.c  web_server_internal.h  web_server_websocket.c
main/wifi/: wifi.c  wifi.h  wifi_events.c  wifi_events.h  wifi_state.c  wifi_state.h  wifi_state_machine.c  wifi_state_machine.h
ota/: manifest.json
test/: CMakeLists.txt  README.md  test_can_conversion.c  test_can_victron_events.c  test_config_manager_json.c  test_end_to_end.c  test_event_bus.c  test_monitoring.c  test_system_boot_counter.c  test_telemetry_json.c  test_thread_safety.c  test_uart_bms.c  test_web_server_config_visibility.c  test_wifi_state_machine.c  uart_test_vectors.c
test-server/: README.md  enhanced-test-server.js  package.json  server.js
test/mqtt/: test_tiny_mqtt_publisher.c
test/reference/: can_expected_snapshot.csv
tools/: audit_mapping.py  mapping_audit.py
web/: API_REFERENCE.md  ECHARTS_CONCLUSION.md  ECHARTS_OPTIMIZATION.md  README.md  TESTING.md  build-echarts-custom.js  classe.txt  classes.txt  code-metrique.html  dashboard-old.js  dashboard.js  debug-dashboard.html  debug.html  extract-classes.html  extract-from-files.html  extracteur.html  index.html  minimal.html  mqtt-config.html  package.json  rollup.config.js  simple.html  style.css  test-echarts.html  test-gauge.html  test-icons.html  test.html  validate-echarts.js  vite.config.js  write-registre.html
(+64 files in other folders)
